Remainder of JDK 8 compatibility